<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/versionText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1.0" />

    <TextView
        android:id="@+id/dialogSettingTransportId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dialog_setting_transport_id"
        app:layout_constraintStart_toEndOf="@+id/version"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editDialogSettingTransportId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        tools:text="2087"
        app:layout_constraintStart_toEndOf="@+id/dialogSettingTransportId"
        app:layout_constraintTop_toTopOf="parent" />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versionText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/tab_setting_general"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <include
                    layout="@layout/tab_setting_mqtt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <include
                    layout="@layout/tab_setting_egts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </FrameLayout>

        </LinearLayout>

    </TabHost>

    <LinearLayout
        android:id="@+id/containerLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabHost">

        <TextView
            android:id="@+id/textViewButtonLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/access_closed"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLock"
            app:layout_constraintEnd_toStartOf="@+id/buttonLock"
            app:layout_constraintTop_toTopOf="@+id/buttonLock" />

        <ImageView
            android:id="@+id/buttonLock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_setting_ssl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dialog_setting_ssl"
            app:srcCompat="@drawable/ic_baseline_lock_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>